--- a/docker/php-fpm/7.1/Dockerfile
+++ b/docker/php-fpm/7.1/Dockerfile
@@ -116,6 +116,7 @@ RUN curl -Ss https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
         php composer-setup.php && \
         php -r "unlink('composer-setup.php');" && \
+        mv composer.phar /usr/local/bin/composer && \
         # Install webpack
         npm install --global webpack && \
         # Install Bower
