Fix locations of xdebug and opcache ini files

--- a/docker/php-fpm/7.1/99-xdebug.ini
+++ b/docker/php-fpm/7.1/99-xdebug.ini
@@ -2,6 +2,7 @@
 xdebug.default_enable = 1
 xdebug.remote_enable = 1
 xdebug.remote_handler = dbgp
+xdebug.remote_mode=req
 xdebug.remote_port = #XDEBUG_REMOTE_PORT#
 xdebug.remote_autostart = 1
 xdebug.remote_connect_back = #XDEBUG_REMOTE_CONNECT_BACK#
