--- a/docker/php-fpm/7.1/supervisord.conf
+++ b/docker/php-fpm/7.1/supervisord.conf
@@ -1,8 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:script_1]
-command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /etc/php/7.1/fpm/pool.d/zz-docker.conf
+#[program:script_1]
+#command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /etc/php/7.1/fpm/pool.d/zz-docker.conf
 
 [program:sshd]
 command=/usr/sbin/sshd -D
